--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -51,6 +51,21 @@ p {
     font: bold 18px 'Open Sans', sans-serif;
 }
 
+button {
+    background-color: #ea5080;
+    color: #f8d1dd;
+    font: bold 20px 'Open Sans Condensed', sans-serif;
+    box-shadow: 0 0 10px rgba(100, 100, 100, 0.2) inset,1px 1px 1px #CCC;
+    margin: 20px;
+    padding: 10px;
+    border-radius: 3px;
+    border-style: none;
+}
+
+button:hover {
+    background-color: #bc3861;
+}
+
 
 /*----------------------------
 	The Navigation Menu
@@ -156,16 +171,7 @@ p {
 	Color Themes
 -----------------------------*/
 
-
-#colorNav li.green{
-	/* This is the color of the menu item */
-	background-color:#00c08b;
-	
-	/* This is the color of the icon */
-	color:#127a5d;
+#colorNav li.red {
+    background-color: #ea5080;
+    color: #f8d1dd;
 }
-
-#colorNav li.red{		background-color:#ea5080;color:antiquewhite;}
-#colorNav li.blue{		background-color:#53bfe2;color:#2884a2;}
-#colorNav li.yellow{	background-color:#f8c54d;color:#ab8426;}
-#colorNav li.purple{	background-color:#df6dc2;color:#9f3c85;}
