--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -45,6 +45,19 @@ h1 {
     font: bold 70px 'Open Sans', sans-serif;
 }
 
+h2 {
+    color: darkslategray;
+    padding: 20px;
+    font: italic 18px 'Open Sans', sans-serif;
+}
+
+h3 {
+    color: darkslategray;
+    padding: 20px;
+    padding-top: 0px;
+    font: 18px 'Open Sans', sans-serif;
+}
+
 p {
     color: darkslategray;
     padding: 20px;
@@ -175,3 +188,28 @@ button:hover {
     background-color: #ea5080;
     color: #f8d1dd;
 }
+
+/*#colorNav li.green {
+    background-color: #00c08b;
+    color: #127a5d;
+}
+
+#colorNav li.red {
+    background-color: #ea5080;
+    color: #aa2a52;
+}
+
+#colorNav li.blue {
+    background-color: #53bfe2;
+    color: #2884a2;
+}
+
+#colorNav li.yellow {
+    background-color: #f8c54d;
+    color: #ab8426;
+}
+
+#colorNav li.purple {
+    background-color: #df6dc2;
+    color: #9f3c85;
+}*/
