--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,6 +23,8 @@ body{
     padding: 0px 0 0;
 	font:14px/1.3 'Segoe UI',Arial, sans-serif;
 	min-height:500px;
+    margin: auto;
+    text-align: center;
 }
 
 a, a:visited {
