set max width of image

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -81,6 +81,10 @@ button:hover {
     background-color: #bc3861;
 }
 
+img {
+    max-width: 100%;
+}
+
 
 /*----------------------------
 	The Navigation Menu
